Updated config and removed TLS

--- a/src/main/resources/config/config-secure-prod.yaml
+++ b/src/main/resources/config/config-secure-prod.yaml
@@ -1,6 +1,12 @@
-kcertificates:
+anypoint.platform:
+  client_secret: "![]"
+  
+certificates:
   keystore:
     password: "![]"
+
+rollbar:
+  accesstoken: "![]"
 
 sf:
   consumer-key: "![]"
