--- a/src/main/resources/config/config-local.yaml
+++ b/src/main/resources/config/config-local.yaml
@@ -2,19 +2,28 @@ api:
   name: "wwj-salesforce-sapi"
   version: "v1"
   path: "/api/${api.version}/*"
-  id: ""
+  id: "20100636"
   env: "LOCAL"
   
-https:
-  host: "localhost"
-  port: "8081"
-  timeout: "30000"
+listener:
+  port:
+    https: "8082"
+    http: "8081"
   
 certificates:
   keystore:
     path: "certificates/wwj-nonprod-mule.p12"
     alias: "wwj-nonprod-mule"
-  
+
+anypoint.platform:
+  client_id: "096284b4905c4063bf76e97c3a23761c"
+
+rollbar:
+  path: "/api/1/item/"
+  host: "api.rollbar.com"
+  port: "443"
+  environment: "LOCAL"
+    
 sf:
   username: "mulesoftintegrationuser@mulesoft.com.wwjsit"
   token-endpoint: "https://weworkjapan--wwjsit.sandbox.my.salesforce.com/services/oauth2/token"
