--- a/src/main/resources/config/config-prod.yaml
+++ b/src/main/resources/config/config-prod.yaml
@@ -2,19 +2,28 @@ api:
   name: "wwj-salesforce-sapi"
   version: "v1"
   path: "/api/${api.version}/*"
-  id: ""
+  id: "20105533"
   env: "PROD"
   
-https:
-  host: ""
-  port: "8081"
-  timeout: "30000"
+listener:
+  port:
+    https: "8082"
+    http: "8081"
 
 certificates:
   keystore:
     path: ""
     alias: "wwj-prod-mule"
 
+anypoint.platform:
+  client_id: ""
+
+rollbar:
+  path: "/api/1/item/"
+  host: "api.rollbar.com"
+  port: "443"
+  environment: "PROD"
+    
 sf:
   username: ""
   token-endpoint: ""
