--- a/src/main/resources/config/config-sit.yaml
+++ b/src/main/resources/config/config-sit.yaml
@@ -2,19 +2,28 @@ api:
   name: "wwj-salesforce-sapi"
   version: "v1"
   path: "/api/${api.version}/*"
-  id: ""
+  id: "20105158"
   env: "SIT"
   
-https:
-  host: ""
-  port: "8081"
-  timeout: "30000"
+listener:
+  port:
+    https: "8082"
+    http: "8081"
 
 certificates:
   keystore:
     path: "certificates/wwj-nonprod-mule.p12"
     alias: "wwj-nonprod-mule"
 
+anypoint.platform:
+  client_id: "de977a588ba4453686e59287670a8fd2"
+
+rollbar:
+  path: "/api/1/item/"
+  host: "api.rollbar.com"
+  port: "443"
+  environment: "SIT"
+    
 sf:
   username: "mulesoftintegrationuser@mulesoft.com.wwjsit"
   token-endpoint: "https://weworkjapan--wwjsit.sandbox.my.salesforce.com/services/oauth2/token"
