--- a/src/main/resources/config/config-uat.yaml
+++ b/src/main/resources/config/config-uat.yaml
@@ -2,19 +2,28 @@ api:
   name: "wwj-salesforce-sapi"
   version: "v1"
   path: "/api/${api.version}/*"
-  id: ""
+  id: "20105533"
   env: "UAT"
   
-https:
-  host: ""
-  port: "8081"
-  timeout: "30000"
+listener:
+  port:
+    https: "8082"
+    http: "8081"
 
 certificates:
   keystore:
     path: "certificates/wwj-nonprod-mule.p12"
     alias: "wwj-nonprod-mule"
 
+anypoint.platform:
+  client_id: "f5255a40ee13488caa63da8242ccb088"
+ 
+rollbar:
+  path: "/api/1/item/"
+  host: "api.rollbar.com"
+  port: "443"
+  environment: "UAT"
+   
 sf:
   username: ""
   token-endpoint: ""
